--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@100mslive/react-sdk": "^0.0.15",
+    "@headlessui/react": "^1.6.0",
     "next": "12.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
